--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MDJK National Park</title>
+  <title>Flathead Lake National Park</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -18,7 +18,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">MDJK National Park</a>
+    <a class="navbar-brand" href="#"> Flathead Lake National Park</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -99,8 +99,8 @@
   <!--- Jumbotron -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">MDJK National Park</h1>
-      <p class="lead">MDJK National Park is located in Northwest Montana. It is a bit south of Glacier National Park and is the 60th national
+      <h1 class="display-4">Flathead Lake National Park</h1>
+      <p class="lead">Flathead Lake National Park is located in Northwest Montana. It is a bit south of Glacier National Park and is the 60th national
         park in the U.S. It was founded in 2018 and is brand new. The park contains first-class experiences for summer and
         winter where you can ski, snowboard, hike, camp, fish, and other things. The park contained over 100,000 visitors on opening day.</p>
     </div>
@@ -108,7 +108,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">About the Park</h1>
-      <p class="lead">MDJK National Park, where you can climb mountains, swim lengths, hike trails, learn about nature, and pretty much anything
+      <p class="lead">Flathead Lake National Park, where you can climb mountains, swim lengths, hike trails, learn about nature, and pretty much anything
         to do with nature. As the nations newest park, we take pride in how we do things. So come on. Journey into the untamed
         wilderness and stake your claim in the brand new history of this park. Because as we said earlier, this place is
         our home, and we want it to be yours too.
