--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MDJK National Park</title>
+    <title>Brown Bear National Park</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -18,7 +18,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">MDJK National Park</a>
+        <a class="navbar-brand" href="index.html">Brown Bear National Park</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Our History</h1>
-            <p class="lead">The idea of MDJK National Park was created in 2016 when people saw the beautiful scenery and teeming wildlife
+            <p class="lead">The idea of Flathead Lake National Park was created in 2016 when people saw the beautiful scenery and teeming wildlife
                 on the spot of a national forest south of Glacier National Park. The push to get the park recgonized as a
                 national park began and picked up steam with support from presidential canidates like Bernie Sanders, Ben
                 Carson, and Marco Rubio. After surveying the area, Environmental Protection Agency officials said the park
@@ -78,7 +78,7 @@
                 scenery and wilderness in the park as they hike the numerous trails, fish in the countless lakes and rivers,
                 camp out and backpack at camping sites, and even climb mountains. Nature lovers will want to visit the Flathead
                 Lake Nature Preserve, licensed through the national park service. Bird watchers will be astounded at all
-                the different birds and species. Make sure you check it out as your adventure is waiting for you at MDJK
+                the different birds and species. Make sure you check it out as your adventure is waiting for you at Flathead Lake
                 National Park and Flathead Lake Nature Preserve.
             </p>
         </div>
