--- a/page5.html
+++ b/page5.html
@@ -42,12 +42,12 @@
                         Visitor Information
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Directions</a>
+                        <a class="dropdown-item" href="page5.html">Directions</a>
                         <a class="dropdown-item" href="#">Hotels/Resturants</a>
                         <a class="dropdown-item" href="#">Attractions</a>
                     </div>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="page4.html">Opinion/Blog</a>
                 </li>
                 <form class="form-inline my-2 my-lg-0">
@@ -55,25 +55,3 @@
                 </form>
         </div>
     </nav>
-
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/5969a488/north_cascades_1365x546.jpg" alt="First slide">
-            </div>
-        </div>
-    </div>
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Our Recommendations</h1>
-            <p class="lead">Stay inside the park so you don't waste time and money. Do multiple things at a time and have a plan at all times.
-                Carry a map at all times. See what your group wants to do; and make a schedule for it.
-            </p>
-        </div>
-    </div>
-
-
-</body>
-
-</html>
