--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MDJK National Park</title>
+  <title>Flathead Lake National Park</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -18,7 +18,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">MDJK National Park</a>
+    <a class="navbar-brand" href="index.html">Flathead Lake National Park</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,6 @@
   </div>
   <div class="card">
       <div class="card-deck text-center">
-      <div class="card-body">
       <img src="images/.jpg" alt="Puma" class="right card-img-top">
       <div class="card-body">
         <h4 class="card-title">Pumas</h4>
