--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Visitor Information
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Directions</a>
+            <a class="dropdown-item" href="page5.html">Directions</a>
             <a class="dropdown-item" href="#">Hotels/Resturants</a>
             <a class="dropdown-item" href="#">Attractions</a>
           </div>
@@ -60,30 +60,30 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/valley_of_the_ten_peaks_1365x546.jpg"
+        <img class="d-block w-100" src="images/Valley of the ten peaks.jpg"
           alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/smoke_mountain_1365x546.jpg" alt="Second slide">
+        <img class="d-block w-100" src="images/mountain.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/waterfall_1365x546.jpeg" alt="Third slide">
+        <img class="d-block w-100" src="images/Mammoth ccave.jpg" alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/mountain_lakes_1365x546.jpg" alt="Fourth slide">
+        <img class="d-block w-100" src="images/mountain lakes resized.jpg" alt="Fourth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/valley_of_the_ten_peaks.2_1365x546.jpg"
+        <img class="d-block w-100" src="images/Lake Waterfall.jpg" alt="Fifth Slide"
           alt="Fifth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/black_lake_1365x546.jpg" alt="Sixth slide">
+        <img class="d-block w-100" src="images/Northern Lights.jpg" alt="Sixth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/fbc65002/mammoth_cave_1365x546.jpg" alt="Seventh slide">
+        <img class="d-block w-100" src="images/smoke mountain resized.jpg" alt="Seventh slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://stmed.net/sites/default/files/lake-wallpapers-27927-5507515.jpg" alt="Eighth slide">
+        <img class="d-block w-100" src="images/waterfall resized.jpeg" alt="Eighth slide">
       </div>
     </div>
 
