--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+<head> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Flathead Lake National Park</title>
@@ -9,15 +8,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link href="emerald lake.css" rel="stylesheet">
 </head>
-
 <body>
-
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="avbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Flathead Lake National Park</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +38,9 @@
             Visitor Information
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Directions</a>
-            <a class="dropdown-item" href="#">Hotels/Resturants</a>
-            <a class="dropdown-item" href="#">Attractions</a>
+            <a class="dropdown-item" href="page5.html">Directions</a>
+            <a class="dropdown-item" href="">Hotels/Resturants</a>
+            <a class="dropdown-item" href="">Attractions</a>
           </div>
         </li>
         <li class="nav-item">
@@ -55,43 +51,43 @@
         </form>
     </div>
   </nav>
-  <!--Cards-->
 
+  <!--Cards-->
   <h2 align="center">Animals</h2>
-  <img src="images/ram.jpg" alt="Bighorn Ram" class="center">
-  <p align="center">Bighorn sheep enjoying the snowy slopes of The Northern Westerm Mountains of MDJK National Park</p>
+  <img  src="images/ram.jpg"  alt="Bighorn Ram" class="center">
+  <p align="center">Bighorn sheep enjoying the snowy slopes of The Northern Westerm Mountains of MDJK National Park.</p>
   <div class="card-deck text-center">
     <div class="card">
-      <img src="images/puma.jpg" alt="Puma" class="left card-img-top">
+      <a href="page6.html"><img src="images/puma.jpg"  alt="Puma" class="left card-img-top"></a>
       <div class="card-body">
-        <h4 class="card-title">Pumas</h4>
-        <p class="card-text">Puma on the hillside playing in the snow on the north side of the park</p>
+        <h4 class="card-title">Mammals</h4>
+        <p class="card-text">Puma on the hillside playing in the snow on the north side of the park.</p>
       </div>
     </div>
     <div class="card">
-      <img src="images/eagles.jpg" alt="Eagles" class="right card-img-top">
+      <a href="page7.html"> <img src="images/eagles.jpg " alt="Eagles" class="right card-img-top"></a>
       <div class="card-body">
-        <h4 class="card-title">Eagles</h4>
-        <p class="card-text">Eagles looking out for prey while looking after their young</p>
+        <h4 class="card-title">Birds</h4>
+        <p class="card-text">Eagles looking out for prey while looking after their young.</p>
       </div>
     </div>
   </div>
-  <div class="card">
-      <div class="card-deck text-center">
-      <img src="images/.jpg" alt="Puma" class="right card-img-top">
+  <div class="card-deck text-center">
+    <div class="card">
+    <a href="page8.html"> <img src="images/salmon.jpg"a href="page8.html" alt="Solmon" class="right card-img-top"></a>
       <div class="card-body">
-        <h4 class="card-title">Pumas</h4>
-        <p class="card-text">Puma on the hillside playing in the snow on the north side of the park</p>
+        <h4 class="card-title">Fish</h4>
+        <p class="card-text">As the Salmon jump up stream, fighting the current below.</p>
       </div>
     </div>
       <div class="card">
-          <img src="images/snake.jpeg." alt="Puma" class="left card-img-top">
-          <div class="card-body">
-            <h4 class="card-title">Pumas</h4>
-            <p class="card-text">Puma on the hillside playing in the snow on the north side of the park</p>
+          <a href="page9.html"> <img src="images/snake.jpeg" href="page9.html" alt="Snake" class="left card-img-top"></a>
+         <div class="card-body">
+            <h4 class="card-title">Reptiles and Amphibians</h4>
+            <p class="card-text">Rapped around a tree watching its pray from the high ground.</p>
           </div>
         </div>
-      </div>
-</body>
-</div>
+        <br>
 </html>
+</body>
+</div> 
