--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brown Bear National Park</title>
+    <title>Flathead Lake National Park ohhh yeahhh grandpaaa</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -18,7 +18,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Brown Bear National Park</a>
+        <a class="navbar-brand" href="index.html">Flathead Lake National Park</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                         Visitor Information
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Directions</a>
+                        <a class="dropdown-item" href="page5.html">Directions</a>
                         <a class="dropdown-item" href="#">Hotels/Resturants</a>
                         <a class="dropdown-item" href="#">Attractions</a>
                     </div>
@@ -60,7 +60,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/5969a488/lake_clark_1365x546.jpg" alt="First slide">
+                <img class="d-block w-100" src="images/craterLakeResize.jpg" alt="First slide">
             </div>
         </div>
     </div>
