--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="http://www.simpleimageresizer.com/_uploads/photos/5969a488/north_cascades_1365x546.jpg" alt="First slide">
+                <img class="d-block w-100" src="images/northCascadesResize.jpg" alt="First slide">
             </div>
         </div>
     </div>
