--- a/page5.html
+++ b/page5.html
@@ -9,7 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="emerald lake.css" rel="stylesheet">
 </head>
@@ -33,10 +32,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="page3.html">About</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="page2.html">Animals/Wilderness</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         Visitor Information
@@ -55,3 +55,42 @@
                 </form>
         </div>
     </nav>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="images/glacierChill.jpg" alt="First slide">
+            </div>
+        </div>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Glacier Park International Airport (Kalispell, MT)</h1>
+                  <p class="lead"></p>
+                </div>
+              </div>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Missoula International Airport (Missoula, MT)</h1>
+                  <p class="lead"></p>
+                </div>
+              </div>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Bozeman Yellowstone International Airport (Bozeman, MT)</h1>
+                  <p class="lead"></p>
+                </div>
+              </div>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Spokane International Airport (Spokane, WA)</h1>
+                  <p class="lead"></p>
+                </div>
+              </div>
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Calgary International Airport (Calgary, Canada)</h1>
+                  <p class="lead">
+
+                  </p>
+                </div>
+              </div>
