--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="en">
 <head> 
   <meta charset="utf-8">
@@ -14,48 +13,49 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="avbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Flathead Lake National Park</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page3.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="page2.html">Animals/Wilderness</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Visitor Information
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="page5.html">Directions</a>
-            <a class="dropdown-item" href="">Hotels/Resturants</a>
-            <a class="dropdown-item" href="">Attractions</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page4.html">Opinion/Blog</a>
-        </li>
-        <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
-        </form>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="page3.html">About</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="page2.html">Animals/Wilderness</a>
+            </li>
+            <li class="nav-item dropdown active">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Visitor Information
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="page5.html">Directions</a>
+                    <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
+                    <a class="dropdown-item" href="#">Attractions</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="page4.html">Opinion/Blog</a>
+            </li>
+            <form class="form-inline my-2 my-lg-0">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+            </form>
     </div>
-  </nav>
+</nav>
 
   <!--Cards-->
   <h2 align="center">Animals</h2>
-  <img  src="images/ram.jpg"  alt="Bighorn Ram" class="center">
+  <img  src="images/sheepResize.jpg"  alt="Bighorn Ram" class="center">
   <p align="center">Bighorn sheep enjoying the snowy slopes of The Northern Westerm Mountains of MDJK National Park.</p>
   <div class="card-deck text-center">
     <div class="card">
@@ -75,7 +75,7 @@
   </div>
   <div class="card-deck text-center">
     <div class="card">
-    <a href="page8.html"> <img src="images/salmon.jpg"a href="page8.html" alt="Solmon" class="right card-img-top"></a>
+    <a href="page8.html"> <img src="images/salmon.jpg" href="page8.html" alt="Salmon" class="right card-img-top"></a>
       <div class="card-body">
         <h4 class="card-title">Fish</h4>
         <p class="card-text">As the Salmon jump up stream, fighting the current below.</p>
@@ -88,101 +88,6 @@
             <p class="card-text">Rapped around a tree watching its pray from the high ground.</p>
           </div>
         </div>
-        <br>
+    </div>
 </html>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head> 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flathead Lake National Park</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-  <link href="emerald lake.css" rel="stylesheet">
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="avbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Flathead Lake National Park</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page3.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="page2.html">Animals/Wilderness</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Visitor Information
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="page5.html">Directions</a>
-            <a class="dropdown-item" href="">Hotels/Resturants</a>
-            <a class="dropdown-item" href="">Attractions</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page4.html">Opinion/Blog</a>
-        </li>
-        <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
-        </form>
-    </div>
-  </nav>
-
-  <!--Cards-->
-  <h2 align="center">Animals</h2>
-  <img  src="images/ram.jpg"  alt="Bighorn Ram" class="center">
-  <p align="center">Bighorn sheep enjoying the snowy slopes of The Northern Westerm Mountains of MDJK National Park.</p>
-  <div class="card-deck text-center">
-    <div class="card">
-      <a href="page6.html"><img src="images/puma.jpg"  alt="Puma" class="left card-img-top"></a>
-      <div class="card-body">
-        <h4 class="card-title">Mammals</h4>
-        <p class="card-text">Puma on the hillside playing in the snow on the north side of the park.</p>
-      </div>
-    </div>
-    <div class="card">
-      <a href="page7.html"> <img src="images/eagles.jpg " alt="Eagles" class="right card-img-top"></a>
-      <div class="card-body">
-        <h4 class="card-title">Birds</h4>
-        <p class="card-text">Eagles looking out for prey while looking after their young.</p>
-      </div>
-    </div>
-  </div>
-  <div class="card-deck text-center">
-    <div class="card">
-    <a href="page8.html"> <img src="images/salmon.jpg"a href="page8.html" alt="Solmon" class="right card-img-top"></a>
-      <div class="card-body">
-        <h4 class="card-title">Fish</h4>
-        <p class="card-text">As the Salmon jump up stream, fighting the current below.</p>
-      </div>
-    </div>
-      <div class="card">
-          <a href="page9.html"> <img src="images/snake.jpeg" href="page9.html" alt="Snake" class="left card-img-top"></a>
-         <div class="card-body">
-            <h4 class="card-title">Reptiles and Amphibians</h4>
-            <p class="card-text">Rapped around a tree watching its pray from the high ground.</p>
-          </div>
-        </div>
-        <br>
-</html>
-</body>
->>>>>>> 7395e3d2e5b2b6740b401538c407f1080ebf6786
-</div> 
