--- a/page12.html
+++ b/page12.html
@@ -1,66 +1,102 @@
-<<<<<<< HEAD
 <!DOCTYPE>
-<html>
+<html lang="en">
 <head>
-
-
-
-
-
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link href="emerald lake.css" rel="stylesheet">
 </head>
 <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#"> Flathead Lake National Park</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html">Home
+                        <span class="sr-only">(current)</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="page3.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="page2.html">Animals/Wilderness</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Visitor Information
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="page5.html">Directions</a>
+                        <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
+                        <a class="dropdown-item" href="#">Attractions</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="page4.html">Opinion/Blog</a>
+                    </li>
+                    <form class="form-inline my-2 my-lg-0">
+                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+                    </form>
+                </div>
+              </nav>
+            <h1>Hotels/Resturants</h1>
+            <h4>This is for you'r ease and injoiment to help you'r great inventure be even better</h4>
+
+
+
+            <div class="card-deck text-center">
+              <div class="card">
+              <a href="#"> <img src="#" href="#" alt="#" class="right card-img-top"></a>
+                <div class="card-body">
+                  <h4 class="card-title">Mountain Lake Lodge</h4>
+                  <p class="card-text">4.4 Star<br>With a pool, nest to the lake, amd old wood themed<br>Address: 150 Flathead Lodge Rd, Bigfork, MT 59911<br>Phone: (406) 837-4391</p>
+                </div>
+              </div>
+                <div class="card">
+                    <a href="#"> <img src="#" href="#" alt="#" class="left card-img-top"></a>
+                    <div class="card-body">
+                      <h4 class="card-title">aaa</h4>
+                      <p class="card-text">###<br>###<br>###<br>###</p>
+                    </div>
+                  </div>
+                </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
+                <div class="card-deck text-center">
+                    <div class="card">
+                    <a href="#"> <img src="#" href="#" alt="#" class="right card-img-top"></a>
+                      <div class="card-body">
+                        <h4 class="card-title">Flathead Lake Lodge</h4>
+                        <p class="card-text">4.9 Star<br>With a pool and bar<br>Address: 14735 Sylvan Dr, Bigfork, MT 59911<br>Phone: (406) 837-3800</p>
+                      </div>
+                    </div>
+                      <div class="card">
+                          <a href="#"> <img src="#" href="#" alt="#" class="left card-img-top"></a>
+                          <div class="card-body">
+                            <h4 class="card-title">Timbers Motel</h4>
+                            <p class="card-text">4.2 Star<br>With a medium sized pool<br>Address: 8540 MT-35, Bigfork, MT 59911<br>Phone: (406) 837-6200</p>
+                          </div>
+                        </div>
+                      </div>
 
 
 
 
 
 </body>
-=======
-<!DOCTYPE>
-<html>
-<head>
+</html>
 
-
-
-
-
-
-</head>
-<body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
->>>>>>> 7395e3d2e5b2b6740b401538c407f1080ebf6786
-<html>
+        
