--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@
                         Visitor Information
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="page5.html">Directions</a>
+                        <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
                         <a class="dropdown-item" href="#">Attractions</a>
                     </div>
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="page4.html">Opinion/Blog</a>
                 </li>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
                 </form>
         </div>
     </nav>
@@ -83,4 +83,14 @@
             </p>
         </div>
     </div>
+
+
+    <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Contact Us</h1>
+              <p class="lead">Be sure to contact us with any questions regarding your trip<br>
+                  For the passes office contact (406) 987-6543<br>For the main office contact (406) 876-5432<br>Our Address is 1 Montana 680, Swan Lake, Montana 99511
+              </p>
+            </div>
+          </div>
 
