--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,4 @@
-+<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head> 
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
                     Visitor Information
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="page5.html">Directions</a>
+                    <a class="dropdown-item" href="page5.html">Airport Information</a>
                     <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
                     <a class="dropdown-item" href="#">Attractions</a>
                 </div>
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="page4.html">Opinion/Blog</a>
             </li>
             <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
             </form>
     </div>
 </nav>
@@ -56,7 +56,7 @@
   <!--Cards-->
   <h2 align="center">Animals</h2>
   <img  src="images/sheepResize.jpg"  alt="Bighorn Ram" class="center">
-  <p align="center">Bighorn sheep enjoying the snowy slopes of The Northern Westerm Mountains of MDJK National Park.</p>
+  <h4><p align="center">Bighorn sheep enjoying the snowy slopes of The Northwest Mountains of Flathead Lake National Park.</h4></p>
   <div class="card-deck text-center">
     <div class="card">
       <a href="page6.html"><img src="images/puma.jpg"  alt="Puma" class="left card-img-top"></a>
