--- a/page4.html
+++ b/page4.html
@@ -42,7 +42,7 @@
                         Visitor Information
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="page5.html">Directions</a>
+                        <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
                         <a class="dropdown-item" href="#">Attractions</a>
                     </div>
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="page4.html">Opinion/Blog</a>
                 </li>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
                 </form>
         </div>
     </nav>
@@ -70,6 +70,7 @@
             <p class="lead">Stay inside the park so you don't waste time and money. Do multiple things at a time and have a plan at all times.
                 Carry a map at all times. See what your group wants to do; and make a schedule for it.
             </p>
+            <p>Sorry we do not have our blog up and running yet. We are working on that.</p>
         </div>
     </div>
 
